<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Drawable Designer</string>
    <string name="allCorners" translatable="false">allCorners</string>
    <string name="angle" translatable="false">angle</string>
    <string name="bottomLeftCorner" translatable="false">bottomLeftCorner</string>
    <string name="bottomRightCorner" translatable="false">bottomRightCorner</string>
    <string name="centerColor" translatable="false">centerColor</string>
    <string name="centerX" translatable="false">centerX</string>
    <string name="centerY" translatable="false">centerY</string>
    <string name="dashGap" translatable="false">dashGap</string>
    <string name="dashWidth" translatable="false">dashWidth</string>
    <string name="endColor" translatable="false">endColor</string>
    <string name="exportXml" translatable="false">exportXml</string>
    <string name="gradient" translatable="false">gradient</string>
    <string name="gradientRadius" translatable="false">gradientRadius</string>
    <string name="gradientType" translatable="false">gradientType</string>
    <string name="innerRadius" translatable="false">innerRadius</string>
    <string name="innerRadiusRatio" translatable="false">innerRadiusRatio</string>
    <string name="paddingBottom" translatable="false">paddingBottom</string>
    <string name="paddingLeft" translatable="false">paddingLeft</string>
    <string name="paddingRight" translatable="false">paddingRight</string>
    <string name="paddingTop" translatable="false">paddingTop</string>
    <string name="previewHeight" translatable="false">previewHeight</string>
    <string name="previewLevel" translatable="false">previewLevel</string>
    <string name="previewWidth" translatable="false">previewWidth</string>
    <string name="rectangle" translatable="false">rectangle</string>
    <string name="ring" translatable="false">ring</string>
    <string name="ringThickness" translatable="false">ringThickness</string>
    <string name="ringThicknessRatio" translatable="false">ringThicknessRatio</string>
    <string name="save" translatable="false">save</string>
    <string name="saveImage" translatable="false">saveImage</string>
    <string name="shapeHeight" translatable="false">shapeHeight</string>
    <string name="shapeType" translatable="false">shapeType</string>
    <string name="shapeWidth" translatable="false">shapeWidth</string>
    <string name="solidColor" translatable="false">solidColor</string>
    <string name="solidStroke" translatable="false">solidStroke</string>
    <string name="startColor" translatable="false">startColor</string>
    <string name="strokeColor" translatable="false">strokeColor</string>
    <string name="strokeWidth" translatable="false">strokeWidth</string>
    <string name="topLeftCorner" translatable="false">topLeftCorner</string>
    <string name="topRightCorner" translatable="false">topRightCorner</string>
    <string name="useCenterColor" translatable="false">useCenterColor</string>
    <string name="useGradient" translatable="false">useGradient</string>
    <string name="useGradientLevel" translatable="false">useGradientLevel</string>
    <string name="usePadding" translatable="false">usePadding</string>
    <string name="useRadiusRatio" translatable="false">useRadiusRatio</string>
    <string name="useShapeLevel" translatable="false">useShapeLevel</string>
    <string name="useShapeSize" translatable="false">useShapeSize</string>
    <string name="useStroke" translatable="false">useStroke</string>
    <string name="useThicknessRatio" translatable="false">useThicknessRatio</string>
</resources>
